# sports-prediction-system

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .markdownlintrc.json  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  .yamllint  AGENT_HANDOFF.md  AGENT_PRACTICE_STANDARDS.md  AI_OPTIMIZATION_OPPORTUNITIES.md  AI_OPTIMIZATION_REVIEW_SUMMARY.md  AI_REVIEW_DOCUMENTATION_INDEX.md  ALGORITHM_OPTIMIZATION_ROADMAP.md  ANALYSIS_SCORE_XG_ALIGNMENT.md  AUTONOMOUS_COMPLETION_REPORT.md  BUG_FIX_COMPREHENSIVE_AUDIT.md  BUG_REPORT_SCORE_XG_ALIGNMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_REVIEW.md  CONTRIBUTING.md  DEPENDABOT_MERGE_AUDIT_2026-04-12.md  DEVELOPER_SETUP.md  Dockerfile  ENHANCEMENT_SUMMARY.md  ENVIRONMENT_STABILITY.md  HIGH_PRIORITY_OPTIMIZATIONS_STATUS.md  INSTRUCTIONS.json  LAYOUT_REDESIGN_SUMMARY.md  LICENSE  MAINTAINERS.md  MPDP.md  OPTIMIZATION_EXECUTION_PLAN.md  OPTIMIZATION_VERIFICATION_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_PHASE2_COMPLETION_SUMMARY.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  (+97 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PR_DRAFT.md  PR_UPDATE_BODY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions-HPTrade.md  copilot-instructions.md
BACKUP_v4.0_WORKING/: BACKUP_INFO.txt  BACKUP_INFO_v4.1.txt  data_quality_enhancer.py  enhanced_predictor.py  generate_fast_reports.py  generate_fast_reports_enhanced.py  pyproject.toml  requirements.txt
BACKUP_v4.0_WORKING/app/: __init__.py  cli.py  config.py  run.py
BACKUP_v4.0_WORKING/app/analytics/: advanced_engine.py
BACKUP_v4.0_WORKING/app/dashboard/: __init__.py  server.py
BACKUP_v4.0_WORKING/app/data/: __init__.py  connectors.py  connectors_old.py  ingestion.py  realtime_integrator.py  schemas.py
BACKUP_v4.0_WORKING/app/models/: __init__.py  ml_enhancer.py  predictor.py  trainer.py
BACKUP_v4.0_WORKING/app/reports/: __init__.py  generator.py  generator_backup.py
BACKUP_v4.0_WORKING/app/utils/: __init__.py  caching.py  logging.py  retry.py
BACKUP_v4.0_WORKING/config/: .gitkeep
UML/: README.md  component_diagram.mmd  sequence_diagram.mmd
app/: __init__.py  cli.py  config.py  run-HPTrade.py  run.py  types.py
config/: accuracy_optimization_workflow.json  settings-HPTrade.yaml  settings.yaml  team_name_map.yaml
deploy/: prepare_for_transfer.ps1  register_fetch_scheduled_task.ps1  sports-prediction.service  windows-deploy.ps1
docs/: AUDIT_REPORT.md  CHANGELOG.md  CONTAINER_SETUP.md  DEVCONTAINER_SETUP.md  DEVELOPER_QUICKSTART.md  DEV_PUSH_PR_GUIDE.md  LEGAL_SIGNOFF_TEMPLATE.md  ML_ADVANCED_MODEL_PLAN.md  MPDP.md  RATE_LIMITING.md  README.md  REAL_DATA_INTEGRATION_PLAN.md  REAL_DATA_INTEGRATION_PLAN_CLEAN.md  ROTATE_KEYS_AND_SCRUB.md  SCRAPING_COMPLIANCE.md  SECRET_GUIDE.md  STATE_SYNC.md  USB_TRANSFER.md  automation.md  compliance_log.md  dev_notes_ci_pr.json  flashscore_debug.md  manual_local_workflow.md  pamphlet.json  pamphlet_readme.md  results_fetcher.md  robots_report.md  system_review_2026-01-01.md
legacy_files/: advanced_data_acquisition.py  ai_ml_predictor.py  ai_statistics_engine.py  analyze_scores.py  betting_market_intelligence.py  data_expansion_roadmap.py  data_integration_manager.py  debug_report.py  debug_team_data.py  demo_clean_system.py  free_vs_paid_clarification.py  generate_clean_reports.py  generate_fast_reports_clean.py  immediate_data_expansion.py  la_liga_match.py  market_data_connectors.py  neural_pattern_engine.py  serie_a_match.py  test_api_key.py  test_complete_system.py  test_data_quality_enhancement.py  test_expected_score.py  test_json_serialization.py  test_market_intelligence_debug.py  test_market_intelligence_output.json  test_normalization.py  test_png_layout.py  test_real_report.py  test_referee_enhancement.py  test_v41_features.py  test_v42_ai_features.py  ultimate_prediction_enhancer.py  ultimate_prediction_system-HPTrade.py  ultimate_prediction_system.py
scripts/: README.md  _debug_list_matches.py  add_results_and_optimize.py  audit_images.py  audit_prediction_jsons.py  audit_render_calls.py  audit_synthetic_reports.py  auto_update_and_train.ps1  automated_learning_loop.py  backfill_using_backup_key.py  bootstrap_devcontainer.sh  build_advanced_model_features.py  check_api_keys.py  check_environment.py  check_football_data_key.py  check_match_lookup.py  check_matplotlib.py  check_numpy_import.py  check_reports_finished.py  check_robots.py  check_throttle_config.py  cleanup_force_remove_matches.py  collect_historical_data.py  collect_historical_results.py  commit_optimization_results.ps1  create_env_Z1.1.ps1  debug_env.py  debug_flashscore_extract.py  debug_flashscore_inspect.py  debug_load_advanced_model.py  debug_save_image.py  debug_save_image_palace.py  debug_save_image_target.py  dev_setup.ps1  dev_tools.ps1  devcontainer_build.ps1  enable_github_workflow.ps1  ensure_activation.ps1  evaluate_model.py  export_metrics.py  (+50 more)
tests/: __init__.py  conftest.py  run_integration_runner.py  test_accuracy_all.py  test_advanced_features.py  test_all_phases.py  test_audit_fraction.py  test_audit_script.py  test_backtesting.py  test_cache_ttl_by_endpoint.py  test_calibration.py  (+87 more)
(+985 files in other folders)
